VPC Interface Endpoints and Private Link/1. Create VPC Endpoint and access SQS/network.yaml
AWSTemplateFormatVersion: "2010-09-09"
Resources:
  devtutorialvpc:
    DeletionPolicy: Delete
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: 10.10.0.0/16
      Tags:
        - Key: Name
          Value: dev-tutorial-vpc
  devtutorialigw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
          - Key: Name
            Value: dev-tutorial-igw
  devtutorialagw:
    DeletionPolicy: Delete
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: devtutorialvpc
      InternetGatewayId:
        Ref: devtutorialigw

  devtutorialpubsubnet:
    DeletionPolicy: Delete
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2a
      VpcId:
        Ref: devtutorialvpc
      CidrBlock: 10.10.0.0/24
      MapPublicIpOnLaunch: true #Con esto, se asigna automaticamente una ip publica a las instancias levantadas en esta subnet de manera automatica
      Tags:
        - Key: Name
          Value: dev-tutorial-pubsubnet
  devtutorialpubroutetablepubsubnet: #Route Table
    DeletionPolicy: Delete
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: devtutorialvpc
      Tags:
          - Key: Name
            Value: dev-tutorial-pubroutetable-pubsubnet
  devtutorialigwroutepubroutetablepubsubnet: #Registro en la route table
    DeletionPolicy: Delete
    Type: AWS::EC2::Route
    DependsOn: devtutorialagw
    Properties:
      RouteTableId:
        Ref: devtutorialpubroutetablepubsubnet
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: devtutorialigw
  devtutorialassigwroutepubroutetablepubsubnet:
    DeletionPolicy: Delete
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: devtutorialpubsubnet
      RouteTableId:
        Ref: devtutorialpubroutetablepubsubnet

  devtutorialprivsubnet:
    DeletionPolicy: Delete
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2b
      VpcId:
        Ref: devtutorialvpc
      CidrBlock: 10.10.1.0/24
      MapPublicIpOnLaunch: false 
      Tags:
        - Key: Name
          Value: dev-tutorial-privsubnet
  devtutorialprivroutetableprivsubnet:
    DeletionPolicy: Delete
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: devtutorialvpc
      Tags:
        - Key: Name
          Value: dev-tutorial-privroutetable-privsubnet
  devtutorialassprivrouteprivroutetableprivsubnet:
    DeletionPolicy: Delete
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: devtutorialprivsubnet
      RouteTableId:
        Ref: devtutorialprivroutetableprivsubnet

    #EC2 Instances and SG
  devtutorialsg:
    DeletionPolicy: Delete
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and All ICMP Ipv4
      VpcId:
        Ref: devtutorialvpc
      SecurityGroupIngress:
        - IpProtocol: tcp #Regla para SSH
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: dev-tutorial-sg
  devtutorialinstancebastion:
    DeletionPolicy: Delete
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-03f38e546e3dc59e1 #El ami id de amazon linux cambia entre regiones
      InstanceType: t2.micro
      KeyName: miatechdeveast2
      PrivateIpAddress: "10.10.0.11"
      SubnetId:
        Ref: devtutorialpubsubnet
      SecurityGroupIds:
        - Ref: devtutorialsg
      Tags:
        - Key: Name
          Value: dev-tutorial-instance-bastion
  devtutorialinstancepriv:
    DeletionPolicy: Delete
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-03f38e546e3dc59e1 #El ami id de amazon linux cambia entre regiones
      InstanceType: t2.micro
      KeyName: miatechdeveast2
      PrivateIpAddress: "10.10.1.11"
      IamInstanceProfile: CUSTOM_SQS_FULL_ACCESS  #role para acceso a SQS
      SubnetId:
        Ref: devtutorialprivsubnet
      SecurityGroupIds:
        - Ref: devtutorialsg
      Tags:
        - Key: Name
          Value: dev-tutorial-instance-private
  #VPC Gateway Endpoint
  devtutorialinterfaceendpointsg:
    DeletionPolicy: Delete
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Http access for sqs
      VpcId:
        Ref: devtutorialvpc
      SecurityGroupIngress:
        - IpProtocol: tcp #Regla para acceso https
          FromPort: 443
          ToPort: 443
          CidrIp: 10.10.0.0/16
      Tags:
        - Key: Name
          Value: dev-tutorial-interfaceendpoint-sg
  devtutorialvpcinterfaceendpoint:
    DeletionPolicy: Delete
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface #Por defecto, el tipo de endpoint es gateway, por lo que si se requiere interface se debe especificar
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Ref: devtutorialinterfaceendpointsg
      VpcId: 
        Ref: devtutorialvpc
      ServiceName: com.amazonaws.us-east-2.sqs
      SubnetIds:
        - Ref: devtutorialprivsubnet
#SQS

  devtutorialqueue:
    DeletionPolicy: Delete
    Type: AWS::SQS::Queue
    Properties:
      QueueName: dev-tutorial-queue
      DelaySeconds: 0
      MaximumMessageSize: 262144
      MessageRetentionPeriod: 345600
      ReceiveMessageWaitTimeSeconds: 0
      VisibilityTimeout: 30
